workloads/socks-shop/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: jenkins-jenkins
  namespace: sock-shop
spec:
  rules:
  - host: front-end.socks.do.citopro.com
    http:
      paths:
      - backend:
          serviceName: front-end
          servicePort: 80
  tls:
  - hosts:
    - front-end.socks.do.citopro.com
    secretName: socks-tls
